force-app/main/default/objects/User_Trending_Vote__c/User_Trending_Vote__c.object-meta.xml
<CustomObject>
    <label>User Trending Vote</label>
    <nameField>
        <label>User Trending Vote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Trending Votes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>