force-app/main/default/objects/User_Trending_Vote__c/fields/Down_Votes__c.field-meta.xml
<CustomField>
    <fullName>Down_Votes__c</fullName>
    <label>Down Votes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>