force-app/main/default/objects/User_Trending_Vote__c/fields/Up_Votes__c.field-meta.xml
<CustomField>
    <fullName>Up_Votes__c</fullName>
    <label>Up Votes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>